Fix vertical alignment in LinkContextItem
Bug: T237289

--- a/src/ui/styles/contextitems/ve.ui.LinkContextItem.css
+++ b/src/ui/styles/contextitems/ve.ui.LinkContextItem.css
@@ -50,7 +50,7 @@
 
 .ve-ui-desktopContext .ve-ui-linkContextItem .ve-ui-linkContextItem-label {
 	margin: 0.7em -1em 0;
-	padding: 0.7em 1em 0;
+	padding: 0.7em 0 0 1em;
 	border-top: 1px solid #eaecf0;
 	display: flex;
 	width: 100%;
@@ -87,8 +87,9 @@
 }
 
 .ve-ui-desktopContext .ve-ui-linkContextItem .ve-ui-linkContextItem-label .ve-ui-linkContextItem-label-action .oo-ui-buttonElement-button {
-	padding: 0;
 	border: 0;
+	padding-left: 0;
+	padding-right: 0;
 }
 
 .ve-ui-desktopContext .ve-ui-linkContextItem .ve-ui-linkContextItem-label .ve-ui-linkContextItem-label-action .oo-ui-labelElement-label {
